--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -3,10 +3,14 @@ body {
     background-image: url(../imagens/fundo-site.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    min-height: 100vh;
+    gap: 30px;
 }
 
 .cabecalho {
-    background-color: red;
     display: flex;
     justify-content: center;
 }
@@ -20,17 +24,20 @@ body {
     display: flex;
     flex-direction: column;
     padding: 12px;
+    gap: 5px;
+    position: absolute;
 }
 
 .cartao.selecionado {
     opacity: 1;
+    z-index: 1;
 }
 
 .lista-personagens {
-    background-color: blue;
     width: 300px;
     height: 500px;
     border-radius: 10px;
+    position: relative;
 }
 
 .slider {
@@ -59,7 +66,6 @@ body {
 }
 
 .cartao .nivel-carta {
-    background-color: cadetblue;
     display: flex;
     justify-content: flex-end;
     margin-right: 10px;
@@ -79,10 +85,10 @@ body {
     border: 2px solid #a67c52;
     text-align: left;
     line-height: 1.5;
+    padding: 5px;
 }
 
 .cartao .informacoes .informacoes-ataque {
-    background-color: green;
     display: flex;
     justify-content: end;
     gap: 5px;
@@ -93,3 +99,77 @@ body {
     font-size: 13px;
 }
 
+.cartao .informacoes .descricao {
+    border-bottom: 1px solid #000000;
+    padding: 10px;
+    max-height: 95px;
+    overflow-y: scroll;
+    font-size: 12px;
+}
+
+.fundo-1 {
+    background: url(../imagens/fundo-1.jpg) no-repeat;
+}
+
+.fundo-2 {
+    background: url(../imagens/fundo-2.jpg) no-repeat;
+}
+
+.fundo-3 {
+    background: url(../imagens/fundo-3.jpg) no-repeat;
+}
+
+.fundo-4 {
+    background: url(../imagens/fundo-4.jpg) no-repeat;
+}
+
+.fundo-5 {
+    background: url(../imagens/fundo-5.jpg) no-repeat;
+}
+
+.fundo-6 {
+    background: url(../imagens/fundo-6.jpg) no-repeat;
+}
+
+.fundo-7 {
+    background: url(../imagens/fundo-7.jpg      ) no-repeat;
+}
+
+.btn-seta {
+    background-color: white;
+    width: 70px;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50px;
+    border: 0;
+    cursor: pointer;
+    transition: backgroud-color 0.2s ease-in-out;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.btn-seta.btn-voltar {
+    transform: rotateY(180deg);
+}
+
+.btn-seta:hover {
+    background-color: #8351fe;
+}
+
+body::-webkit-scrollbar-track {
+    background-color: #c08057;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background #c08057;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #c08057;
+}
